@@ -1,8 +1,8 @@
 plugins {
-	`java-library-conventions`
-	`shadow-conventions`
-	`java-multi-release-sources`
-	`java-repackage-jars`
+	id("junitbuild.java-library-conventions")
+	id("junitbuild.shadow-conventions")
+	id("junitbuild.java-multi-release-sources")
+	id("junitbuild.java-repackage-jars")
 }
 
 description = "JUnit Platform Console"
@@ -13,6 +13,8 @@ dependencies {
 
 	compileOnlyApi(libs.apiguardian)
 
+	compileOnly(libs.openTestReporting.events)
+
 	shadowed(libs.picocli)
 
 	osgiVerification(projects.junitJupiterEngine)
@@ -20,7 +22,17 @@ dependencies {
 }
 
 tasks {
+	compileModule {
+		options.compilerArgs.addAll(listOf(
+			"--add-modules", "org.opentest4j.reporting.events",
+			"--add-reads", "${project.projects.junitPlatformReporting.dependencyProject.javaModuleName}=org.opentest4j.reporting.events",
+			"--add-modules", "info.picocli",
+			"--add-reads", "${javaModuleName}=info.picocli"
+		))
+	}
 	shadowJar {
+		val release17ClassesDir = sourceSets.mainRelease17.get().output.classesDirs.singleFile
+		inputs.dir(release17ClassesDir).withPathSensitivity(PathSensitivity.RELATIVE)
 		exclude("META-INF/versions/9/module-info.class")
 		relocate("picocli", "org.junit.platform.console.shadow.picocli")
 		from(projectDir) {
@@ -28,17 +40,19 @@ tasks {
 			into("META-INF")
 		}
 		from(sourceSets.mainRelease9.get().output.classesDirs)
-		doLast {
-			exec {
-				executable = project.the<JavaToolchainService>().launcherFor(java.toolchain).get()
-					.metadata.installationPath.file("bin/jar").asFile.absolutePath
-				args(
-					"--update",
-					"--file", archiveFile.get().asFile.absolutePath,
-					"--main-class", "org.junit.platform.console.ConsoleLauncher"
-				)
-			}
-		}
+		doLast(objects.newInstance(junitbuild.java.ExecJarAction::class).apply {
+			javaLauncher.set(project.javaToolchains.launcherFor(java.toolchain))
+			args.addAll(
+				"--update",
+				"--file", archiveFile.get().asFile.absolutePath,
+				"--main-class", "org.junit.platform.console.ConsoleLauncher",
+				"--release", "17",
+				"-C", release17ClassesDir.absolutePath, "."
+			)
+		})
+	}
+	codeCoverageClassesJar {
+		exclude("org/junit/platform/console/options/ConsoleUtils.class")
 	}
 	jar {
 		manifest {
@@ -52,5 +66,12 @@ tasks {
 	// So in order to resolve this, it can only run on Java 9
 	osgiProperties {
 		property("-runee", "JavaSE-9")
+	}
+}
+
+eclipse {
+	classpath {
+		sourceSets -= project.sourceSets.mainRelease9.get()
+		sourceSets -= project.sourceSets.mainRelease17.get()
 	}
 }
